// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayerInfo renders when availableBalance is 123456 and totalBetAmount is 56789 1`] = `
<div
  className="PlayerInfo-component"
>
  <div>
    Avail. Balance
    <br />
    $ 123,456
  </div>
  <div>
    Total Bet
    <br />
    $ 56,789
  </div>
  <div
    id="reset-history"
    onClick={[Function]}
  >
    RESET HISTORY
  </div>
</div>
`;

exports[`PlayerInfo renders when availableBalance is foo and totalBetAmount is bar 1`] = `
<div
  className="PlayerInfo-component"
>
  <div>
    Avail. Balance
    <br />
    $ foo
  </div>
  <div>
    Total Bet
    <br />
    $ bar
  </div>
  <div
    id="reset-history"
    onClick={[Function]}
  >
    RESET HISTORY
  </div>
</div>
`;
